# VideoEditor

./: .gitignore  ALTERNATIVE_SOLUTIONS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  ENCODING_FIXED.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_USAGE.md  GitHub_Actions失败分析.md  GitHub_Actions诊断报告.md  INSTALL.md  INSTALLATION_GUIDE.md  INSTALL_DEPENDENCIES.md  LICENSE  MOVE_PROJECT.ps1  PACKAGE_README.md  PACKAGING_GUIDE.md  PATH_ISSUE_README.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_SETUP.md  README.md  SCRIPT_FIX_SUMMARY.md  START_HERE.md  STATISTICS.md  TESTING_GUIDE.md  VIRTUAL_ENV_SOLUTION.md  auto_github_with_cli.ps1  auto_install_all.ps1  auto_upload_github.ps1  build.bat  build.ps1  build_and_package.bat  build_and_package.ps1  check_build_status.ps1  check_environment.ps1  fix_installation.ps1  install_vcpkg_packages.ps1  package.bat  (+7 more)
.github/workflows/: build.yml
docs/: 开发文档.md  用户手册.md
include/: MainWindow.h  VideoDecoder.h  VideoEncoder.h  VideoPlayer.h  VideoProcessor.h
src/: MainWindow.cpp  VideoDecoder.cpp  VideoEncoder.cpp  VideoPlayer.cpp  VideoProcessor.cpp  main.cpp
